--- a/src/Presentation/SmartStore.Web/Administration/Views/Export/_CreateOrUpdate.Filter.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Export/_CreateOrUpdate.Filter.cshtml
@@ -2,6 +2,11 @@
 @using SmartStore.Core.Domain.DataExchange;
 @using SmartStore.Admin.Models.DataExchange;
 
+<div class="alert alert-info">
+	<button type="button" class="close" data-dismiss="alert">×</button>
+	@Html.Raw(T("Admin.Configuration.Export.Filter.Note"))
+</div>
+
 <table class="adminContent">
 	@if (Model.ProductFilter != null)
 	{
